<resources>
    <string name="app_name">NowSportsReviewApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_tabelas">Tabela</string>
    <string name="menu_contato">Contato</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="titulo_nome_app">Now Sports Review</string>
    <string name="email_team_support">email_support@gmail.com</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="todo">TODO</string>
    <string name="noticias">Noticias</string>
    <string name="back">Voltar</string>
    <string name="placar">placar</string>
    <string name="titulo">Titulo</string>
    <string name="timevisitante">timeVisitante</string>
    <string name="siglavisitante">siglaVisitante</string>
    <string name="timecasa">timeCasa</string>
    <string name="siglacasa">siglaCasa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_sobre">Aplicativo feito para os fãs de futebol para trazer as principais noticias do seu time no campeonato brasileiro.</string>
    <string name="contato_email">Email</string>
</resources>