<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_principal">

    <fragment
        android:id="@+id/nav_principal"
        android:name="com.dojo.nowsportsreviewapp.ui.principal.PrincipalFragment"
        android:label="@string/menu_principal"
        tools:layout="@layout/fragment_principal" />
    <fragment
        android:id="@+id/nav_contato"
        android:name="com.dojo.nowsportsreviewapp.ui.contato.ContatoFragment"
        android:label="@string/menu_contato"
        tools:layout="@layout/fragment_contato" />
    <fragment
        android:id="@+id/nav_tabelas"
        android:name="com.dojo.nowsportsreviewapp.ui.tabelas.TabelasFragment"
        android:label="@string/menu_tabelas"
        tools:layout="@layout/fragment_tabelas" />
    <fragment
        android:id="@+id/nav_sobre"
        android:name="com.dojo.nowsportsreviewapp.ui.sobre.SobreFragment"
        android:label="@string/menu_sobre"
        tools:layout="@layout/fragment_sobre" />


</navigation>